2022-05-27 yves  <deville.yves@alpestat.com>

	* A Taylor expansion is now used for the probability functions and
	their derivatives for a shape close to zero. This avoids a very
	small discontinuity that occured for very small shapes.  This new
	feature seems to be specific to NSGEV.
 	
2021-10-26 yves  <deville.yves@alpestat.com>

	* BUG fix: the quantile function did not work correctly with
	(non-default) low.tail = FALSE due to a missuse of the .Call
	interface.
	
2018-12-14  yves  <deville.yves@alpestat.com>

	* BUG fix: the computation of the confidence intervals using the
	"delta" method was wrong in 'predict.TVGEV', 'predict.NSGEV' and
	'predictUncond' due to a missing sqrt.

2018-12-07  yves  <deville.yves@alpestat.com>

	* BUG fix: in 'rGEV' the function simulated an exponential rather
	than a Gumbel when shape = 0.

2018-10-15  yves  <deville.yves@alpestat.com>

	* Warn about the need of centering in the documentation of
	`polynomX`.

2017-09-29  yves  <deville.yves@alpestat.com>

	* Improved the speed of the bootstrap computations in
	'predict.TVGEV'.

	* Small changes in doc.

2017-09-27  yves  <deville.yves@alpestat.com>

	* Added 'natSplineX' for a natural spline design.

	* Fixed small problems in code and doc.

2017-08-21  yves  <deville.yves@alpestat.com>

	* Changed 'plot.TVGEV' to render in black and white print.

	* Refactored code of 'profLik': easier to read and display
	information.

	* Added a better control of arguments passed through dots.

	* Added exact computation of Hessian for TVGEV models. Might be
	plugged in the estimation in the future.

	* Added bootstap inference on unconditional predictions.
	
	
2017-08-14  yves  <deville.yves@alpestat.com>

	* Changed predict.TVGEV to improve the convergence of the
	constrained optimisation.

2017-06-13  yves  <deville.yves@alpestat.com>

	* Added the computation of the (exact) Hessian of the log-density
	and of the quantile for the GEV distribution.
