@@ -54,7 +54,7 @@
 ##' 
 ##' @references
 ##' Yves Deville (2024)
-##' "Profile Likelihood via Optimisation and Differential Equations" arXiv
+##' "Profile Likelihood via Optimisation and Differential Equations" \emph{arXiv}
 ##' \doi{10.48550/arXiv.2404.02774}.
 ##'
 ##' @section Caution: This function is experimental.
