@@ -1,5 +1,9 @@
 ##*****************************************************************************
 ##' Generalised Residuals for a \code{TVGEV} model.
+##'
+##' The generalised residuals are obtained by applying to each
+##' observation \eqn{y_b} an increasing function depending on the
+##' (estimated) GEV parameters \eqn{\boldsymbol{\theta}_b}{\theta_b}.
 ##' 
 ##' @title Generalised Residuals for a \code{TVGEV} Model
 ##'
@@ -15,23 +19,29 @@
 ##' @param ... Not used yet.
 ##' 
 ##' @return A vector of generalised residuals which should
-##' \emph{approximately} be independent and \emph{approximately}
-##' follow the standard exponential or the uniform distribution,
-##' depending on the value of \code{type}.
+##'     \emph{approximately} be independent and \emph{approximately}
+##'     follow the target distribution: standard Gumbel, standard
+##'     exponential or standard uniform, depending on the value of
+##'     \code{type}.
 ##' 
-##' @note The upper 95\% quantile of the standard exponential is close
-##'     to \eqn{3} which can be used to gauge "large residuals". Using
-##'     \code{type = "gumbel"} seems better to diagnose abnormally
-##'     small residuals as may result from abnormally small block
-##'     maxima.
+##' @note The upper 95\% quantile of the standard Gumbel and the
+##'     standard exponential is close to \eqn{3} which can be used to
+##'     gauge "large residuals". Using \code{type = "gumbel"} seems
+##'     better to diagnose abnormally small residuals as may result
+##'     from abnormally small block maxima.
 ##'
 ##' @references Cox, D.R. and Snell E.J. (1968) "A General Definition
-##' of Residuals".  \emph{JRSS Ser. B}, \bold{30}(2), pp. 248-275.
+##' of Residuals".  \emph{JRSS Ser. B}, \bold{30}(2), pp. 248-275,
+##' \doi{10.1111/j.2517-6161.1968.tb00724.x}.
+##'
+##' Katz, R.W. and Parlange, M. B. and Naveau, P. (2002)
+##' "Statistics of extremes in hydrology", \emph{Advances in Water Resources},
+##' \bold{25}(8), pp. 1287-1304, \doi{10.1016/S0309-1708(02)00056-8}.
 ##'
 ##' Panagoulia, D. and Economou, P. and Caroni, C. (2014)
 ##' "Stationary and Nonstationary Generalized Extreme Value Modelling of
 ##'  Extreme Precipitation over a Mountainous Area under Climate Change".
-##' \emph{Environmetrics} \bold{25}(1), pp. 29-43.
+##' \emph{Environmetrics} \bold{25}(1), pp. 29-43, \doi{10.1002/env.2252}.
 ##' 
 ##' @importFrom nieve pGEV
 ##' @importFrom stats residuals resid
@@ -86,7 +96,7 @@ residuals.TVGEV <- function(object,
 ##' Plot the residuals of a \code{TVGEV} model object against the
 ##' date.
 ##'
-##' @title Plot Residuals of a \code{TGVEV} Model
+##' @title Plot Residuals of a \code{TVGEV} Model
 ##'
 ##' @param x An object with class \code{"TVGEV"}.
 ##'
@@ -120,7 +130,7 @@ plot.resid.TVGEV <- function(x, y = NULL, ...) {
 ##' Plot the residuals of a \code{TVGEV} model object against the
 ##' date.
 ##' 
-##' @title Plot Residuals of a \code{TGVEV} Model
+##' @title Plot Residuals of a \code{TVGEV} Model
 ##'
 ##' @param object A \code{TVGEV} object.
 ##'
