@@ -1,26 +1,137 @@
-R package NSGEV
-================
-Yves Deville
-05/09/2016
 
-Welcome to the **NSGEV** package! The main function of the package is
-`TVGEV` which creates an object with class `"TVGEV"` representing a
-Time-Varying model with GEV margins. This kind of model is especially
-useful to study *block maxima*, usually annual maxima. A popular use is
-assessing the impact of global warming using series of annual maxima of
-the daily maximal temperatures.
+### NSGEV
 
-# NEWS
+The **NSGEV** R package is devoted to some Non-Stationary Extreme Value
+models
 
-See the file [NEWS.md](NEWS.md). This file will now on be used in place
-of the `ChangeLog` file.
+The main function of the package is `TVGEV` which creates an object with
+class `"TVGEV"` representing a Time-Varying model with GEV margins
+depending on the time. This kind of model is especially useful to study
+*block maxima*, usually annual maxima.
 
-Mind that the **nieve** package which is used to provide the GEV
-distribution functions also has its own NEWS file.
+### Example
 
-# INSTALLATION
+In this example we use the annual maxima of the daily maximal
+temperature (TX) in Dijon (France) provided as the `TXMax_Dijon` data
+frame
 
-## Using the *remotes* package
+``` r
+library(NSGEV)
+head(TXMax_Dijon)
+```
+
+    ##   Year TXMax
+    ## 1 1921    NA
+    ## 2 1922    NA
+    ## 3 1923    NA
+    ## 4 1924  33.6
+    ## 5 1925  34.2
+    ## 6 1926  34.8
+
+Note that the warnings and messages will not be shown in this example.
+
+A TVGEV model requires a date variable beginnings of the annuela blocks
+
+``` r
+df <- within(TXMax_Dijon, Date <- as.Date(paste0(Year, "-01-01")))
+fit0 <- TVGEV(data = df, response = "TXMax", date = "Date",
+              loc = ~ 1)
+coef(fit0)
+```
+
+    ##     mu_0  sigma_0     xi_0 
+    ## 32.94616  1.87935 -0.19645
+
+``` r
+autoplot(fit0)
+```
+
+![](README_files/figure-gfm/Dijon0-1.png)<!-- -->
+
+We can fit a model with a linear time trend
+
+``` r
+fit1 <- TVGEV(data = df, response = "TXMax", date = "Date",
+              design = polynomX(date = Date, degree = 1),
+              loc = ~ t1)
+autoplot(fit1)
+```
+
+![](README_files/figure-gfm/Dijon1-1.png)<!-- -->
+
+``` r
+coef(fit1)
+```
+
+    ##        mu_0       mu_t1     sigma_0        xi_0 
+    ## 32.93752186  0.01527735  1.84567285 -0.20471258
+
+``` r
+anova(fit0, fit1)
+```
+
+    ## Analysis of Deviance Table
+    ## 
+    ##      df deviance      W  Pr(>W)  
+    ## fit0  3   364.74                 
+    ## fit1  4   361.20 3.5412 0.05986 .
+    ## ---
+    ## Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1
+
+The `predict` method can be used to compute conditional return levels
+corresponding to a given year, be it a past or future year
+
+``` r
+pred <- predict(fit1)
+```
+
+    ## Since 'object' is really time-varying, the Return Levels
+    ## depend on the date. A default choice of dates is made here.
+    ## Use the 'newdate' formal to change this.
+
+``` r
+autoplot(pred)
+```
+
+![](README_files/figure-gfm/DijonPred-1.png)<!-- -->
+
+``` r
+autoplot(predict(fit1, confint = "proflik", trace = 0))
+```
+
+    ## Since 'object' is really time-varying, the Return Levels
+    ## depend on the date. A default choice of dates is made here.
+    ## Use the 'newdate' formal to change this.
+
+![](README_files/figure-gfm/DijonPred-2.png)<!-- -->
+
+``` r
+autoplot(predict(fit1, newdate = "2040-01-01", confint = "proflik", trace = 0))
+```
+
+![](README_files/figure-gfm/DijonPred-3.png)<!-- -->
+
+The default confidence intervals are obtained by using the “delta
+method” but profile likelihood intervals can be otained as well.
+
+Rather than considering the maximum on a specific block, one can
+consider the maximum $M$ on a larger period as sometimes called a
+*design life period*. The distribution of $M$ is then no longer a GEV
+
+``` r
+date <- as.Date(paste0(2025:2040, "-01-01"))
+qm <- quantMax(fit1, date = date, confint = "proflik", trace = 0)
+autoplot(qm) + ggtitle("Quantile of the maximum on 2025-2040")
+```
+
+![](README_files/figure-gfm/DijonMax-1.png)<!-- -->
+
+By changing the value of the `design` argument one can different use
+basis functions such as splines with given knots.
+
+## INSTALLATION
+
+### With the *remotes* package
 
 In an R session use
 
@@ -31,61 +142,26 @@ install_github("IRSN/NSGEV", dependencies = TRUE)
 
 This should install the package and make it ready to use.
 
-Mind that by default this does not build the vignette shipped with the
-package (long-form documentation). To build the vignette, use instead
+Mind that by default this does not build the vignettes shipped with the
+package (long-form documentation). To build the vignettes, use instead
 
 ``` r
 install_github("IRSN/NSGEV", dependencies = TRUE, build_vignettes = TRUE)
 ```
 
-The installation will then take a longer time but the vignette will be
+The installation will then take more time but the vignettes will be
 accessible from the help of the package (link above the “Help Pages”
 section).
 
 You can also select a specific branch or a specific commit by using the
-suitable syntax for `install_github`. For instance to install the branch
-`develop` use
+suitable syntax for `install_github`. See the **remotes** package
+documentation for more details.
 
-``` r
-install_github("IRSN/NSGEV@develop", dependencies = TRUE)
-```
+### Precompiled versions
 
-See the **remotes** package documentation for more details.
-
-## Clone, build and install
-
-### Cloning the repository
-
-You can also clone the repository to install the package. If you do not
-have yet a local `NSGEV` repository, use `git clone` to clone the
-`NSGEV` repository
-
-``` bash
-git clone https://github.com/IRSN/NSGEV
-```
-
-This will create a `NSGEV` sub-directory of the current directory,
-i.e. the directory from which the git command was issued. Of course this
-can work only if you have the permission to clone.
-
-### Installation
-
-Move to the parent directory of your cloned repository and use the
-following command from a terminal to create a tarball source file
-
-``` bash
-R CMD build NSGEV
-```
-
-This will produce a source tarball `NSGEV_x.y.z` where `x`, `y` and `z`
-stand for the major, minor and patch version numbers. Then you can
-install from a command line
-
-``` bash
-R CMD INSTALL NSGEV_x.y.z
-```
-
-Note that you must also have all the packages required by **NSGEV**
-installed.
-
-You can also use the **RStudio** IDE to install the package.
+Precompiled versions of the package are available for some platforms and
+can be downloaded by using the **Releases** link of the GitHub
+Repository. Use `NSGEV_x.y.z.tgz` for MacOS, `NSGEV_x.y.z.tgz` for
+Windows and `NSGEV_x.y.z_R_x86_64-pc-linux-gnu.tar.gz` for Linux Ubuntu
+where `x`, `y` and `z` are the major, minor and patch numbers of the
+package version.
