@@ -528,7 +528,7 @@
     pages = {1287-1304},
     year = {2002},
     doi = {10.1016/S0309-1708(02)00056-8},
-    author = {Katz, Richard W. and Parlange, MArc B. and Naveau, Philippe}
+    author = {Katz, Richard W. and Parlange, Marc B. and Naveau, Philippe}
 }
 %%============================================================================ 
 @article{CoxSnell_GeneralResiduals,
