@@ -1,3 +1,6 @@
+
+THIS FILE IS NO LONGER UPDATED. See instead the  'NEWs.md' file.
+
 2022-05-27 yves  <deville.yves@alpestat.com>
 
 	* A Taylor expansion is now used for the probability functions and
